[Actividad_Parte_1] Es el primer avance de la actividad que se debe entregar.

--- a/Código/ACTIVIDAD.ipynb
+++ b/Código/ACTIVIDAD.ipynb
@@ -6,22 +6,28 @@
    "source": [
     "##  ACTIVIDAD\n",
     "\n",
-    "ENTRENAR EL MODELO Y CON LOS DATOS DE TESTEO VERIFICAR LOS INDICADORES DE VALIDACIÓN PARA LAS TRES CLASES (INCLUYENDO LAS CURVAS)"
+    "ENTRENAR EL MODELO Y CON LOS DATOS DE TESTEO VERIFICAR LOS INDICADORES DE VALIDACIÓN PARA LAS TRES CLASES  DE IRIS (INCLUYENDO LAS CURVAS)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### Importamos las librerias necesarias para el desarrollo del ejercicio\n",
-    "### Antes instalamos las librerias necesarias en consola\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import datasets\n",
-    "from sklearn.inspection import DecisionBoundaryDisplay\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "En la presente actividad se trabajara con los datos de la base \"iris\", con el proposito de modelar la clasificación la especie de una flor a partir de las medidas de sus sepalos y petalos a través de un modelo de regresion logistica."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![imagen_iris.png](imagen_iris.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación cargamos la base iris elaborada por Edgar Anderson:"
    ]
   },
   {
@@ -38,9 +44,15 @@
     }
    ],
    "source": [
-    "# import some data to play with\n",
     "iris = datasets.load_iris()\n",
     "print(iris.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Identificamos sus los nombres de las variables por medio de las cuales se caracteriza cada una de las flores."
    ]
   },
   {
@@ -64,6 +76,13 @@
    ],
    "source": [
     "iris.feature_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En la siguiente tabla se muestran las variables del conjunto de datos que seran útiles para modelar la clasificicación de las flores en la especie adecuada"
    ]
   },
   {
@@ -212,6 +231,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La clasificación de las anteriores 150 flores se asigna a continuación como a variable explicada o variable salida, cuyas posibles respuestas son los valores \"0\", \"1\" y \"2\", que respectivamente corresponden con las especies: setosa, versicolor y virginica."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -245,6 +271,23 @@
     "\n",
     "Y_df = pd.Series(Y, name='species')\n",
     "Y_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entrenamiento y Prueba\n",
+    "\n",
+    "Para lograr el objetivo mecionado anteriormente se  tiene en cuenta una fase de entrenamiento del modelo y otra fase de prueba. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por ello a continuación se separan los datos en dos conjuntos: $70\\%$ los datos de entrenamiento\n",
+    "y $30\\%$ datos de prueba."
    ]
   },
   {
@@ -433,6 +476,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una vez elegidos los datos de entrenamiento, se crea el modelo que va a ser usado como medio para la adecuada clasificación de una nueva flor a partir de los datos de ancho y largo de los sepalos y los petalos de la flor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -454,6 +504,13 @@
    "source": [
     "modelo_log = LogisticRegression(random_state=42, max_iter=1000)\n",
     "modelo_log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se entrena el modelo con el $70\\%$ de los datos."
    ]
   },
   {
@@ -501,6 +558,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una vez se realiza el entrenamiento del modelo, esta listo para realizar clasificaciones con los datos de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -520,6 +584,20 @@
    ],
    "source": [
     "modelo_log.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matriz de confusión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una vez se tiene la clasificación de prueba se compara con los resultados de clasificación real de las especies, a tráves de una matriz de confusión:"
    ]
   },
   {
