--- a/Código/TAREA_2 - Obesity.ipynb
+++ b/Código/TAREA_2 - Obesity.ipynb
@@ -13,15 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ucimlrepo in c:\\users\\lina c\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.0.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: ucimlrepo in c:\\users\\lina c\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.0.3)Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -32,6 +31,13 @@
       "[notice] A new release of pip is available: 23.1.2 -> 24.0\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -40,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +361,7 @@
        "16                                      Obesity level  None             no  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +696,7 @@
        "[2111 rows x 16 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +801,7 @@
        "[2111 rows x 1 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +851,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +872,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1118,7 @@
        "[2111 rows x 9 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1354,7 @@
        "[2111 rows x 8 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1429,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,9 +1440,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.Age= D_conti.Age.round().astype(int)\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.Height= D_conti.Height.round(2)\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.Weight=D_conti.Weight.round()\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.FCVC=D_conti.FCVC.round().astype(int)\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.NCP=D_conti.NCP.round().astype(int)\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.FCVC=D_conti.FCVC.round().astype(int)\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3840218324.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  D_conti.TUE=D_conti.TUE.round().astype(int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0       1\n",
+       "1       0\n",
+       "2       1\n",
+       "3       0\n",
+       "4       0\n",
+       "       ..\n",
+       "2106    1\n",
+       "2107    1\n",
+       "2108    1\n",
+       "2109    1\n",
+       "2110    1\n",
+       "Name: TUE, Length: 2111, dtype: int32"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "D_conti.Age= D_conti.Age.round().astype(int)\n",
     "D_conti.Height= D_conti.Height.round(2)\n",
@@ -1467,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1560,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1637,7 @@
        "Name: Age, Length: 2111, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,14 +1651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14608\\4202248583.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\4202248583.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  D_conti.Age_2= D_conti.Age*3/70\n"
      ]
     },
@@ -1603,7 +1679,7 @@
        "Name: Age, Length: 2111, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,14 +1691,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14608\\3662115040.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\LINA C\\AppData\\Local\\Temp\\ipykernel_14660\\3662115040.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  D_conti.Weight_2= D_conti.Weight*3/180\n"
      ]
     },
@@ -1643,7 +1719,7 @@
        "Name: Weight, Length: 2111, dtype: float64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1655,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1740,7 @@
        "<Axes: ylabel='Age'>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1687,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1772,7 @@
        "<Axes: ylabel='Weight'>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
